// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiFormControlLayoutClearButton is rendered 1`] = `
<button
  aria-label="aria-label"
  class="ouiFormControlLayoutClearButton testClass1 testClass2"
  data-test-subj="test subject string"
  type="button"
>
  <span
    class="ouiFormControlLayoutClearButton__icon"
    data-ouiicon-type="cross"
  />
</button>
`;

exports[`OuiFormControlLayoutClearButton size is rendered 1`] = `
<button
  aria-label="Clear input"
  class="ouiFormControlLayoutClearButton ouiFormControlLayoutClearButton--small"
  type="button"
>
  <span
    class="ouiFormControlLayoutClearButton__icon"
    data-ouiicon-type="cross"
  />
</button>
`;
